compiler/e2e/test/snapshot/ir/expression/resume/resume_return_incorrect_type/snapshot.snap
---
source: compiler/e2e/test/snapshot/mod.rs
expression: clean_run
---
stderr:
error: mismatched types: expected `int32`, found `bool`
   ╭─ compiler/e2e/test/snapshot/ir/expression/resume/resume_return_incorrect_type/main.pnx:16:25
   │
16 │             expectInt32(resume(54))
   │                         ^^^^^^^^^^ expected `int32`, found `bool`
   │
   = ensure the expression type matches the expected type

error: Compilation aborted due to 1 error(s)



stdout:
